<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewpager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:id="@+id/recordSrcollView"
        android:layout_width="370dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/careProviderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/care_provider"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/careProviderContent"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingVertical="8dp"/>

            <TextView
                android:id="@+id/dateTimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/dateTimeContent"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingVertical="8dp" />

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:id="@+id/locationViewText"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:paddingVertical="8dp"
                />

            <com.google.android.gms.maps.MapView
                android:id="@+id/recordMapView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:paddingVertical="8dp" />

            <TextView
                android:id="@+id/picturesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pictures"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <android.support.v7.widget.GridLayout
                android:id="@+id/recordPictureGridLayout"
                android:layout_width="match_parent"
                android:layout_height="62dp">

                <TextView
                    android:id="@+id/recordPictureText"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:paddingVertical="8dp"/>
            </android.support.v7.widget.GridLayout>

            <TextView
                android:id="@+id/bodyViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_parts"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>