<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewRecordActivity">

    <LinearLayout
        android:id="@+id/recordTopNavLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="3dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recordSrcollView"
        app:layout_constraintTop_toTopOf="parent">

        <ToggleButton
            android:id="@+id/recordDetailTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="DETAILS" />

        <ToggleButton
            android:id="@+id/recordCommentTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="COMMENTS" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/recordSrcollView"
        android:layout_width="355dp"
        android:layout_height="479dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recordTopNavLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/careProviderTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/your_care_provider" />

            <TextView
                android:id="@+id/careProviderContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/descriptionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description" />

            <TextView
                android:id="@+id/descriptionContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/dateTimeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_and_time" />

            <TextView
                android:id="@+id/dateTimeContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/locationTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/picturesTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pictures" />

            <LinearLayout
                android:id="@+id/pictureThumnailsVer"
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/pictureThumnailsHor"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"></LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/bodyViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/body_parts" />

            <LinearLayout
                android:id="@+id/bodyPartsTextHor"
                android:layout_width="match_parent"
                android:layout_height="79dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/bodyPartsTextVer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bodyView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/frontView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:color/holo_blue_bright" />

                    <ImageView
                        android:id="@+id/backView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:srcCompat="@android:color/holo_orange_dark" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>